--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:padding="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.youtube.sorcjc.proyectoprofesionales.LoginActivity">
+    tools:context=".ui.LoginActivity">
 
     <TextView
         android:layout_marginTop="12dp"
