--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/activity_vertical_margin"
-    tools:context="com.youtube.sorcjc.proyectoprofesionales.MainActivity">
+    tools:context=".ui.MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -35,11 +35,11 @@
         android:layout_marginTop="12dp"
         android:layout_marginBottom="12dp" />
 
-    <Button
+    <com.google.android.gms.common.SignInButton
         android:id="@+id/btnIngresarGoogle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Ingresar con Google+" />
+        android:layout_height="wrap_content" />
+
     <Button
         android:id="@+id/btnRegistrarme"
         android:layout_width="match_parent"
