--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,6 +35,7 @@
             android:textSize="16sp"/>
 
         <EditText
+            android:id="@+id/etEmail"
             android:layout_width="0dp"
             android:inputType="textEmailAddress"
             android:layout_weight="1"
@@ -54,6 +55,7 @@
             android:textSize="16sp"/>
 
         <EditText
+            android:id="@+id/etPassword"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:inputType="textPassword"
