--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -34,6 +34,7 @@
             android:textSize="16sp"/>
 
         <EditText
+            android:id="@+id/etNombre"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content" />
@@ -73,6 +74,7 @@
             android:textSize="16sp"/>
 
         <EditText
+            android:id="@+id/etEmail"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
@@ -92,6 +94,7 @@
             android:textSize="16sp"/>
 
         <EditText
+            android:id="@+id/etPassword"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
@@ -112,4 +115,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Iniciar sesión"/>
+
 </LinearLayout>
