--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -15,18 +15,66 @@
         android:text="Ningún chat abierto en este momento."
         android:textSize="17sp" />
 
+    <FrameLayout
+        android:id="@+id/layoutBuscar"
+        android:layout_width="match_parent"
+        android:layout_height="76dp"
+        android:layout_marginBottom="8dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingBottom="8dp"
+        android:paddingTop="8dp">
+
+        <EditText
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_marginRight="50dp"
+            android:layout_height="wrap_content" />
+
+        <ImageView
+            android:id="@+id/ivBuscar"
+            android:layout_gravity="right"
+            android:textSize="20sp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/messenger_button_send_round_shadow"/>
+    </FrameLayout>
+
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="300dp"
         android:fillViewport="true"
-        android:padding="16dp">
+        android:layout_marginBottom="8dp"
+        android:padding="14dp">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvCategorias"
+            android:id="@+id/recyclerViewChat"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingBottom="72dp" />
+            android:paddingBottom="36dp" />
 
     </ScrollView>
 
+    <LinearLayout
+        android:id="@+id/layoutIrBusqueda"
+        android:layout_width="match_parent"
+        android:layout_height="76dp"
+        android:orientation="horizontal"
+        android:layout_marginBottom="8dp"
+        android:paddingLeft="16dp">
+
+        <ImageView
+            android:layout_gravity="center"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginRight="16dp"
+            android:background="@drawable/messenger_button_send_round_shadow"/>
+
+        <TextView
+            android:layout_gravity="center"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Buscar"/>
+    </LinearLayout>
 </LinearLayout>
