--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -1,57 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layoutGeneral"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tvNoMessages"
+    <LinearLayout
+        android:id="@+id/layoutTop"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="top"
         android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        android:gravity="center"
-        android:text="Ningún chat abierto en este momento."
-        android:textSize="17sp" />
+        android:orientation="vertical">
 
-    <FrameLayout
-        android:id="@+id/layoutBuscar"
-        android:layout_width="match_parent"
-        android:layout_height="76dp"
-        android:layout_marginBottom="8dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingBottom="8dp"
-        android:paddingTop="8dp">
-
-        <EditText
-            android:layout_gravity="center"
+        <TextView
+            android:id="@+id/tvNoMessages"
             android:layout_width="match_parent"
-            android:layout_marginRight="50dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:text="Ningún chat abierto en este momento."
+            android:textSize="17sp" />
 
-        <ImageView
-            android:id="@+id/ivBuscar"
-            android:layout_gravity="right"
-            android:textSize="20sp"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:background="@drawable/messenger_button_send_round_shadow"/>
-    </FrameLayout>
+        <FrameLayout
+            android:id="@+id/layoutBuscar"
+            android:layout_width="match_parent"
+            android:layout_height="76dp"
+            android:paddingBottom="8dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingTop="8dp">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginRight="50dp" />
+
+            <ImageView
+                android:id="@+id/ivBuscar"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_gravity="right"
+                android:background="@drawable/messenger_button_send_round_shadow"
+                android:textSize="20sp" />
+        </FrameLayout>
+
+    </LinearLayout>
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:layout_marginBottom="92dp"
+        android:layout_marginTop="109dp"
         android:fillViewport="true"
-        android:layout_marginBottom="8dp"
-        android:padding="14dp">
+        android:padding="14dp"
+        android:id="@+id/scrollCentral">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerViewChat"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingBottom="36dp" />
+            android:paddingBottom="12dp" />
 
     </ScrollView>
 
@@ -59,22 +71,24 @@
         android:id="@+id/layoutIrBusqueda"
         android:layout_width="match_parent"
         android:layout_height="76dp"
-        android:orientation="horizontal"
+        android:layout_gravity="bottom"
         android:layout_marginBottom="8dp"
+        android:orientation="horizontal"
         android:paddingLeft="16dp">
 
         <ImageView
-            android:layout_gravity="center"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:layout_gravity="center"
             android:layout_marginRight="16dp"
-            android:background="@drawable/messenger_button_send_round_shadow"/>
+            android:background="@drawable/messenger_button_send_round_shadow" />
 
         <TextView
-            android:layout_gravity="center"
-            android:textSize="20sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Buscar"/>
+            android:layout_gravity="center"
+            android:text="Buscar"
+            android:textSize="20sp" />
     </LinearLayout>
-</LinearLayout>
+
+</FrameLayout>
