--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -1,59 +1,60 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rel_layout_left"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="2dp"
-    app:cardElevation="4dp">
+    android:background="#AAAAAA"
+    android:orientation="vertical"
+    android:layout_marginTop="1dp">
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginRight="-13dp"
+        android:src="@drawable/ic_bubble_corner" />
 
     <FrameLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/imageView"
+        android:background="@drawable/bg_msg_from"
+        android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/ivPhoto"
-            android:src="@drawable/com_facebook_profile_picture_blank_square"
-            android:scaleType="centerCrop"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_gravity="left"/>
-
-        <LinearLayout
-            android:layout_gravity="center"
-            android:orientation="vertical"
-            android:gravity="center"
+        <TextView
+            android:id="@+id/tvTime"
             android:layout_width="wrap_content"
-            android:layout_height="60dp">
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/tvMessage"
+            android:layout_alignRight="@+id/tvMessage"
+            android:layout_below="@+id/tvMessage"
+            android:layout_gravity="bottom|right"
+            android:paddingRight="5dp"
+            android:text="4:13 PM"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="10dp"
+            android:textStyle="italic" />
 
-            <TextView
-                android:id="@+id/tvName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="17sp"
-                android:text="Roberto Prestador"/>
-
-            <TextView
-                android:id="@+id/tvDescription"
-                android:text="Albañil, Pintor"
-                android:textSize="16sp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/tvDate"
-                android:textStyle="italic"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="[05/05 13:30]"/>
-        </LinearLayout>
-
-        <ImageView
-            android:layout_gravity="right"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:src="@drawable/messenger_button_send_round_shadow"/>
+        <TextView
+            android:id="@+id/tvMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignTop="@+id/imageView"
+            android:layout_gravity="left|center_vertical"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="1dp"
+            android:layout_toRightOf="@+id/imageView"
+            android:paddingBottom="5dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="5dp"
+            android:text="Texto de prueba          "
+            android:textColor="#484848"
+            android:textSize="16sp" />
     </FrameLayout>
 
-
-</android.support.v7.widget.CardView>
+</RelativeLayout>
