--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -2,7 +2,7 @@
     android:id="@+id/rel_layout_left"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#AAAAAA"
+    android:background="#dfdfdf"
     android:orientation="vertical"
     android:layout_marginTop="1dp">
 
