--- a/app/src/main/res/layout/fragment_agenda.xml
+++ b/app/src/main/res/layout/fragment_agenda.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="match_parent"
         android:layout_marginBottom="8dp"
         android:fillViewport="true"
-        android:padding="14dp">
+        android:padding="5dp">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerViewAgenda"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingBottom="36dp" />
+            android:paddingBottom="8dp" />
 
     </ScrollView>
 
