--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layoutGeneral"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -40,23 +40,26 @@
 
             <ImageView
                 android:id="@+id/ivBuscar"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_gravity="right"
+                android:src="@drawable/ic_search"
                 android:background="@drawable/messenger_button_send_round_shadow"
                 android:textSize="20sp" />
         </FrameLayout>
 
     </LinearLayout>
 
+    <!-- The magic happens when height is 0 and weight just 1 -->
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:layout_gravity="center"
-        android:layout_marginBottom="92dp"
-        android:layout_marginTop="109dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
         android:fillViewport="true"
-        android:padding="14dp"
+        android:padding="5dp"
         android:id="@+id/scrollCentral">
 
         <android.support.v7.widget.RecyclerView
@@ -67,20 +70,28 @@
 
     </ScrollView>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"/>
+
     <LinearLayout
         android:id="@+id/layoutIrBusqueda"
         android:layout_width="match_parent"
-        android:layout_height="76dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:layout_marginBottom="8dp"
+        android:paddingBottom="8dp"
+        android:paddingTop="8dp"
         android:orientation="horizontal"
         android:paddingLeft="16dp">
 
         <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:src="@drawable/ic_search"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
             android:layout_gravity="center"
-            android:layout_marginRight="16dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginRight="12dp"
             android:background="@drawable/messenger_button_send_round_shadow" />
 
         <TextView
@@ -91,4 +102,4 @@
             android:textSize="20sp" />
     </LinearLayout>
 
-</FrameLayout>
+</LinearLayout>
