--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -4,27 +4,31 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="2dp"
-    app:cardElevation="4dp">
+    app:cardElevation="2dp">
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:padding="8dp">
 
-        <ImageView
+        <com.youtube.sorcjc.proyectoprofesionales.ui.custom.RoundedImageView
             android:id="@+id/ivPhoto"
             android:src="@drawable/com_facebook_profile_picture_blank_square"
             android:scaleType="centerCrop"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
             android:layout_gravity="left"/>
 
         <LinearLayout
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
             android:layout_gravity="center"
             android:orientation="vertical"
             android:gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp">
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
 
             <TextView
                 android:id="@+id/tvName"
@@ -49,11 +53,12 @@
         </LinearLayout>
 
         <ImageView
-            android:layout_gravity="right"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:src="@drawable/messenger_button_send_round_shadow"/>
-    </FrameLayout>
+            android:layout_gravity="center"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/send"
+            android:background="@drawable/messenger_button_send_round_shadow"/>
+    </LinearLayout>
 
 
 </android.support.v7.widget.CardView>
