--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -40,6 +40,7 @@
             <TextView
                 android:id="@+id/tvDescription"
                 android:text="Albañil, Pintor"
+                android:singleLine="true"
                 android:textSize="16sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -53,6 +54,7 @@
         </LinearLayout>
 
         <ImageView
+            android:id="@+id/ivOpenChat"
             android:layout_gravity="center"
             android:layout_width="50dp"
             android:layout_height="50dp"
