--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/activity_vertical_margin"
-    tools:context=".ui.RegistroActivity">
+    tools:context=".ui.RegisterActivity">
 
     <TextView
         android:layout_marginTop="12dp"
