--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -53,18 +53,16 @@
     <LinearLayout
         android:id="@+id/layoutIrBusqueda"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="?attr/actionBarSize"
         android:layout_gravity="bottom"
-        android:paddingBottom="8dp"
-        android:paddingTop="8dp"
         android:orientation="horizontal"
         android:paddingLeft="16dp">
 
         <ImageView
             android:id="@+id/ivIrBusqueda"
             android:src="@drawable/ic_search"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_marginEnd="12dp"
             android:layout_marginRight="12dp"
