--- a/app/src/main/res/layout/activity_terms_conditions.xml
+++ b/app/src/main/res/layout/activity_terms_conditions.xml
@@ -18,29 +18,9 @@
         android:layout_weight="1">
         <TextView
             android:id="@+id/tvTermsAndConditions"
+            android:padding="5dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </ScrollView>
 
-
-    <!--
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Cancelar" />
-
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Aceptar" />
-
-    </LinearLayout>
-    -->
 </LinearLayout>
