New logic for the first screen and GSON deserializers

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,19 +8,19 @@
     tools:context=".ui.RegisterActivity">
 
     <TextView
-        android:layout_marginTop="12dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="22sp"
         android:layout_marginBottom="12dp"
-        android:text="Formulario de registro"/>
+        android:layout_marginTop="12dp"
+        android:text="Formulario de registro"
+        android:textSize="22sp" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:text="Ingrese sus datos:"
-        android:textSize="18sp"
-        android:layout_marginBottom="8dp"/>
+        android:textSize="18sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,16 +28,18 @@
 
         <TextView
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="Nombre:"
-            android:textSize="16sp"/>
+            android:textSize="16sp" />
 
         <EditText
             android:id="@+id/etNombre"
             android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_height="wrap_content" />
+            android:imeOptions="actionNext"
+            android:singleLine="true" />
 
     </LinearLayout>
 
@@ -47,16 +49,16 @@
 
         <TextView
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="Zona:"
-            android:textSize="16sp"/>
+            android:textSize="16sp" />
 
         <Spinner
             android:id="@+id/spinnerZona"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:background="@android:drawable/btn_dropdown"
             android:spinnerMode="dropdown" />
 
@@ -68,17 +70,17 @@
 
         <TextView
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="E-mail:"
-            android:textSize="16sp"/>
+            android:textSize="16sp" />
 
         <EditText
             android:id="@+id/etEmail"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"/>
+            android:layout_weight="1"
+            android:inputType="textEmailAddress" />
 
     </LinearLayout>
 
@@ -88,17 +90,17 @@
 
         <TextView
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="Contraseña:"
-            android:textSize="16sp"/>
+            android:textSize="16sp" />
 
         <EditText
             android:id="@+id/etPassword"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"/>
+            android:layout_weight="1"
+            android:inputType="textPassword" />
 
     </LinearLayout>
 
@@ -106,14 +108,14 @@
         android:id="@+id/btnRealizarRegistro"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Realizar registro"
+        android:layout_marginBottom="12dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="12dp"/>
+        android:text="Realizar registro" />
 
     <Button
         android:id="@+id/btnIrLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Iniciar sesión"/>
+        android:text="Iniciar sesión" />
 
 </LinearLayout>
