--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,29 +10,31 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="22sp"
         android:layout_gravity="center"
-        android:text="Bienvenido a Home Solution"
-        android:layout_marginTop="12dp"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Seleccione una de las opciones:"
-        android:textSize="18sp"
         android:layout_marginTop="12dp"
-        android:layout_marginBottom="8dp"/>
+        android:text="Bienvenido a Home Solution"
+        android:textSize="22sp" />
 
-    <Button
-        android:id="@+id/btnIniciarSesion"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Iniciar sesión" />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:gravity="center">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:text="Por favor revise su conexión a internet"
+            android:textSize="18sp" />
 
+        <Button
+            android:id="@+id/btnTryAgain"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Volver a intentar" />
 
-    <Button
-        android:id="@+id/btnRegistrarme"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Registrarme" />
+    </LinearLayout>
+
 </LinearLayout>
